...
    var accessState: ContactAccessState { .authorized }

    func requestAccess() async -> ContactAccessState { .authorized }

    func callableContacts() throws -> [CallableContact] {
        [
            CallableContact(id: "alex", displayName: "Alex Morgan", phoneNumber: "+46701234567"),
            CallableContact(id: "bea", displayName: "Beatrice Nilsson", phoneNumber: "+46707654321"),
            CallableContact(id: "chris", displayName: "Chris Lee", phoneNumber: "+46701112233")
        ]
    }
}

...
